--- a/SocketLib/SocketLib/SocketLib.vcxproj
+++ b/SocketLib/SocketLib/SocketLib.vcxproj
@@ -27,13 +27,13 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CommonFunc.cpp" />
     <ClCompile Include="SocketManager.cpp" />
     <ClCompile Include="TCP.cpp" />
     <ClCompile Include="UDP.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommonFunc.h" />
     <ClInclude Include="SocketManager.h" />
     <ClInclude Include="TCP.h" />
     <ClInclude Include="UDP.h" />
